fix: Hero section overflow issue fixed

--- a/src/Home.css
+++ b/src/Home.css
@@ -33,7 +33,7 @@
   z-index: -2;
 }
 .content{
-    z-index: 10;
+    z-index: 1;
     position: relative;
     display: flex;
     align-items: center;
